fixed spacing and titles on homepage

--- a/frontend/src/Styles/Homepage.css
+++ b/frontend/src/Styles/Homepage.css
@@ -31,5 +31,5 @@
 .about-card-header {
     text-align: center;
     color: #000000;
-    /* font-size: 18px;  */
+    font-size: 20px; 
 }
